// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interests should show error when fetching interest suggestions failed 1`] = `
<div>
  <h1
    className="sc-kgAjT fdvWRQ"
  >
    Kiinnostukset
  </h1>
  <div>
    error
  </div>
</div>
`;

exports[`Interests should show loading indicator (placeholder tags) when fetching suggestions 1`] = `
<div>
  <h1
    className="sc-bdVaJa hqCxXu"
  >
    Kiinnostukset
  </h1>
  <div
    className="sc-gqjmRU hbhdyC"
  >
    <div
      className="sc-fjdhpX pxUbN"
    >
      <div
        className="sc-iwsKbI ioeCqt"
      >
        <div
          className="sc-gZMcBi bQfwwO"
        />
        <div
          className="sc-gZMcBi bQfwwO"
        />
        <div
          className="sc-gZMcBi bQfwwO"
        />
        <div
          className="sc-gZMcBi bQfwwO"
        />
      </div>
    </div>
    <div
      className="sc-VigVT fXDeIB"
    >
      <div
        className="sc-cSHVUG ihzyBd"
        width="55%"
      />
      <div
        className="sc-cSHVUG ivhRkx"
        width="77%"
      />
      <div
        className="sc-cSHVUG fSBRSP"
        width="65%"
      />
    </div>
    <div
      className="sc-jTzLTM fNPxLb"
    >
      <div
        className="sc-jzJRlG hEFODX"
        width="2rem"
      />
      <div
        className="sc-jzJRlG bXnaHh"
        width="3rem"
      />
      <div
        className="sc-jzJRlG bvJfiY"
        width="5rem"
      />
      <div
        className="sc-jzJRlG gMVeMe"
        width="4rem"
      />
      <div
        className="sc-jzJRlG gJdaLS"
        width="3rem"
      />
      <div
        className="sc-jzJRlG hFLhcw"
        width="2rem"
      />
      <div
        className="sc-jzJRlG gMVeMe"
        width="4rem"
      />
      <div
        className="sc-jzJRlG bXnaHh"
        width="3rem"
      />
      <div
        className="sc-jzJRlG bvJfiY"
        width="5rem"
      />
      <div
        className="sc-jzJRlG jveUHG"
        width="4rem"
      />
      <div
        className="sc-jzJRlG hFLhcw"
        width="2rem"
      />
      <div
        className="sc-jzJRlG bXnaHh"
        width="3rem"
      />
      <div
        className="sc-jzJRlG bvJfiY"
        width="5rem"
      />
      <div
        className="sc-jzJRlG gMVeMe"
        width="4rem"
      />
      <div
        className="sc-jzJRlG bXnaHh"
        width="3rem"
      />
      <div
        className="sc-jzJRlG gMVeMe"
        width="4rem"
      />
      <div
        className="sc-jzJRlG gJdaLS"
        width="3rem"
      />
      <div
        className="sc-jzJRlG gMVeMe"
        width="4rem"
      />
      <div
        className="sc-jzJRlG bXnaHh"
        width="3rem"
      />
      <div
        className="sc-jzJRlG hFLhcw"
        width="2rem"
      />
      <div
        className="sc-jzJRlG bvJfiY"
        width="5rem"
      />
      <div
        className="sc-jzJRlG gMVeMe"
        width="4rem"
      />
    </div>
  </div>
</div>
`;

exports[`Interests should show subtopics for selected topic 1`] = `
<div>
  <h1
    className="sc-kTUwUJ kGELxe"
  >
    Kiinnostukset
  </h1>
  <p>
    Seuraavaksi kartoitamme sinua kiinnostavia aiheita.
  </p>
  <h2
    className="sc-dqBHgY ksSQPK"
  >
    Valitse 3 – 8 aihetta, joiden parissa sinua kiinnostaisi työskennellä.
  </h2>
  <ul
    className="sc-gwVKww hgkBPO"
  >
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Taide ja kulttuuri"
        >
          Taide ja kulttuuri
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki ITZgI"
          onClick={[Function]}
          selected={true}
          value="Luonto ja ympäristö"
        >
          Luonto ja ympäristö
          <div
            className="sc-hwwEjo fVoVLf"
            selected={true}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
      <ul
        className="sc-kfGgVZ bHkGxu"
      >
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Kasvitiede"
            >
              Kasvitiede
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Eläintiede"
            >
              Eläintiede
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Luonnonsuojelu"
            >
              Luonnonsuojelu
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Ympäristönsuojelu"
            >
              Ympäristönsuojelu
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Ympäristö"
            >
              Ympäristö
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Metsätalous"
            >
              Metsätalous
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Metsänhoito"
            >
              Metsänhoito
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Maatalous"
            >
              Maatalous
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Maanviljely"
            >
              Maanviljely
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Puutarhanhoito"
            >
              Puutarhanhoito
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Kotieläintalous"
            >
              Kotieläintalous
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Turkisteollisuus"
            >
              Turkisteollisuus
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Metsäteollisuus"
            >
              Metsäteollisuus
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Kalastus"
            >
              Kalastus
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Metsästys"
            >
              Metsästys
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-esjQYD ikPMy"
        >
          <div
            style={
              Object {
                "display": "contents",
              }
            }
          >
            <div
              className="sc-iyvyFf jhNBkq"
              onClick={[Function]}
              selected={false}
              value="Biologia"
            >
              Biologia
              <div
                className="sc-kPVwWT dkdqPW"
                selected={false}
              >
                <svg
                  data-file-name="SvgCheckmark"
                  style={
                    Object {
                      "height": "1rem",
                      "strokeWidth": 2,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </li>
      </ul>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Maantiede ja yhteiskuntasuunnittelu"
        >
          Maantiede ja yhteiskuntasuunnittelu
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Yhteiskunta ja talous"
        >
          Yhteiskunta ja talous
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Turvallisuus "
        >
          Turvallisuus 
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Koulutus"
        >
          Koulutus
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Terveys ja hyvinvointi"
        >
          Terveys ja hyvinvointi
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Viestintä"
        >
          Viestintä
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Informaatiotekniikka"
        >
          Informaatiotekniikka
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Rakennusala"
        >
          Rakennusala
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Matkailu- ja ravintola-ala"
        >
          Matkailu- ja ravintola-ala
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Liikenne ja logistiikka"
        >
          Liikenne ja logistiikka
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Historia ja uskonto"
        >
          Historia ja uskonto
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-hXRMBi iyfeQC"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-gzOgki hvsiMD"
          onClick={[Function]}
          selected={false}
          value="Matematiikka ja fysiikka"
        >
          Matematiikka ja fysiikka
          <div
            className="sc-hwwEjo iPHDoA"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Interests should show top level interest suggestions when fetched successfully 1`] = `
<div>
  <h1
    className="sc-kkGfuU bpFXsv"
  >
    Kiinnostukset
  </h1>
  <p>
    Seuraavaksi kartoitamme sinua kiinnostavia aiheita.
  </p>
  <h2
    className="sc-iAyFgw jEYeRD"
  >
    Valitse 3 – 8 aihetta, joiden parissa sinua kiinnostaisi työskennellä.
  </h2>
  <ul
    className="sc-jhAzac fDbksL"
  >
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Taide ja kulttuuri"
        >
          Taide ja kulttuuri
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Luonto ja ympäristö"
        >
          Luonto ja ympäristö
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Maantiede ja yhteiskuntasuunnittelu"
        >
          Maantiede ja yhteiskuntasuunnittelu
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Yhteiskunta ja talous"
        >
          Yhteiskunta ja talous
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Turvallisuus "
        >
          Turvallisuus 
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Koulutus"
        >
          Koulutus
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Terveys ja hyvinvointi"
        >
          Terveys ja hyvinvointi
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Viestintä"
        >
          Viestintä
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Informaatiotekniikka"
        >
          Informaatiotekniikka
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Rakennusala"
        >
          Rakennusala
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Matkailu- ja ravintola-ala"
        >
          Matkailu- ja ravintola-ala
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Liikenne ja logistiikka"
        >
          Liikenne ja logistiikka
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Historia ja uskonto"
        >
          Historia ja uskonto
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
    <li
      className="sc-fBuWsC gIEjMU"
    >
      <div
        style={
          Object {
            "display": "contents",
          }
        }
      >
        <button
          className="sc-cvbbAY gmbaVa"
          onClick={[Function]}
          selected={false}
          value="Matematiikka ja fysiikka"
        >
          Matematiikka ja fysiikka
          <div
            className="sc-brqgnP cOjXW"
            selected={false}
          >
            <svg
              data-file-name="SvgCheckmark"
              style={
                Object {
                  "height": "2.1rem",
                  "strokeWidth": 2,
                }
              }
            />
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;
